# 5bar-chess-robot

./: .gitignore  CMakeLists.txt  README.md
code/: .gitignore  CMakeLists.txt
code/src/: bar.cpp  bar.h  chess.cpp  chess.h  config.h  main.cpp  stockfish.cpp  stockfish.h
docs/: design_notes.md  kinematics.md
src/: 5bar  main.cpp
